BNF-Grammar.txt
| : Alternation (OR). Example: a | b means "either a or b".
{} : Repetition (zero or more). Example: {a} means "zero or more a".
[] : Optional (zero or one). Example: [a] means "zero or one a".
() : Grouping. Example: (a | b) groups a or b together.
.. : Range. Example: "a".."z" means any letter from a to z.

program ::= { program_element }

program_element ::= function_definition | statement

function_definition ::= identifier "(" [parameter_list] ")" "{" {statement} [return_statement] "}"

parameter_list ::= identifier { "," identifier }

statement ::= assignment
            | function_call_statement
            | return_statement
            | if_statement
            | for_statement

assignment ::= identifier "=" expression ";"

function_call_statement ::= "call" identifier "(" [argument_list] ")" ";"

argument_list ::= expression { "," expression }

return_statement ::= "return" expression ";"

if_statement ::= "if" "(" expression ")" "{" {statement} "}" [ "else" "{" {statement} "}" ]

for_statement ::= "for" "(" [assignment] ";" [expression] ";" [assignment] ")" "{" {statement} "}"

expression ::= logical_expression

logical_expression ::= comparison_expression { ("AND" | "OR") comparison_expression }

comparison_expression ::= additive_expression [ rel_op additive_expression ]

additive_expression ::= multiplicative_expression { add_op multiplicative_expression }

multiplicative_expression ::= factor { mul_op factor }

factor ::= number
         | string
         | identifier
         | "(" expression ")"
         | function_call

function_call ::= identifier "(" [argument_list] ")"

rel_op ::= "==" | "!=" | "<=" | ">=" | "<" | ">"

add_op ::= "+" | "-"

mul_op ::= "*" | "/" | "%"

identifier ::= letter { letter | digit | "_" }

letter ::= "a".."z" | "A".."Z" | "_"

digit ::= "0".."9"

number ::= digit { digit } [ "." digit { digit } ]

string ::= "\"" { string_content } "\""

string_content ::= letter | digit | special_char

special_char ::= "!" | "@" | "#" | "$" | "%" | "^" | "&" | "*" | "(" | ")" | "-" | "+" | "=" | "{" | "}" | "[" | "]" | "|" | ";" | ":" | "," | "." | "?" | "/" | "<" | ">" | "_" | " " | "'"
